008/2. Simplify Service Networking with VPC Lattice/client_ec2/sg.tf
resource "aws_security_group" "client_ec2" {
  name        = "skills-lattice-client-sg"
  description = "Client EC2 security group"
  vpc_id      = var.client_vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "skills-lattice-client-sg" }
}
